--- a/index.css
+++ b/index.css
@@ -1,17 +1,112 @@
-h1 {
- font-family: 'Cedarville Cursive', cursive;
- color: teal;
+body {
+ font-family: 'Dosis', sans-serif;
+ background-color: #f3f1f7;
 }
 
-form {
- width: 60%;
+#title {
  display: flex;
- text-align: center;
+ flex-direction: row;
+ flex: 1;
+ justify-content: center;
+ font-family: 'Homemade Apple', cursive;
+ font-size: 24px;
+ color: rgb(3, 169, 244);
 }
 
-.innerForm {
- background-color: skyblue;
- width: 50%;
-justify-content: center;
-padding: 5px gray;
+.maincontainer {
+ display: flex;
+ width: 100%;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ align-content: center;
 }
+
+.buttonthought {
+ align-items: center;
+ width: 70%;
+ display: flex;
+ margin-bottom: 2%;
+ justify-content: center;
+}
+
+.listcontainer, textarea, button, form, input {
+ border: 1px solid black;
+ border-radius: 5px;
+}
+
+.listcontainer {
+ width: 400px;
+ background-color: white;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ margin-top: 2%
+}
+
+.thoughtitems {
+ display: flex;
+ flex-direction: column;
+ width:90%;
+ border-bottom: solid 1px #f3f1f7;
+ padding: 10px;
+}
+.thoughtitems:nth-child(1) {
+ padding: 20px 10px 10px 10px;
+}
+.thoughtitems:nth-last-child(1) {
+ padding: 10px 10px 30px 10px;
+}
+h3 {
+ margin: 0px;
+}
+.material-icons {
+ float: right;
+}
+
+/* Form Styling */
+form {
+ flex-direction: column;
+ display: flex;
+ justify-content: center;
+ align-content: center;
+ width: 400px;
+ background-color: #B1DDEA;
+ height: 400px;
+ border-radius: 5px;
+}
+
+label, textarea, button, input {
+ margin: 0% 6%;
+}
+
+label {
+ display: flex;
+ flex: 1;
+ align-items: flex-end;
+ font-size: 18px;
+ font-weight: 600;
+ padding-bottom: 2%;
+}
+
+input {
+ height: 30px;
+ padding: 0px 3px;
+}
+
+textarea {
+ display: flex;
+ flex: 4;
+ margin-bottom: 4%;
+ font-family: 'Dosis', sans-serif;
+}
+
+button {
+ padding: 5px;
+ margin-bottom: 4%;
+ border: 1px solid black;
+ background: white;
+ font-family: 'Dosis', sans-serif;
+ cursor: pointer;
+}
+
