--- a/components/socialPost/socialPost.html
+++ b/components/socialPost/socialPost.html
@@ -1,1 +1,11 @@
-<post-form></post-form>
+<h1 id="title">My Thoughts</h1>
+<section class="maincontainer">
+ <button class="buttonthought" ng-click="$ctrl.toggleDisplay();" ng-show="$ctrl.toggleElements">New Thought</button>
+ <section class="listcontainer">
+
+  <post delete-thought="$ctrl.deleteThought($index);" posted="thought" index="$index" ng-repeat="thought in $ctrl.posts track by $index">
+  </post>
+ </section>
+ <post-form post-form="$ctrl.postForm(newThought);" ng-hide="$ctrl.toggleElements"></post-form>
+
+</section>
