--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
  font-family: 'Dosis', sans-serif;
  background-color: #f3f1f7;
+ display: flex;
 }
 
 #title {
@@ -36,7 +37,7 @@ body {
 }
 
 .listcontainer {
- width: 400px;
+ width: 60%;
  background-color: white;
  display: flex;
  flex-direction: column;
@@ -44,19 +45,14 @@ body {
  margin-top: 2%
 }
 
-.thoughtitems {
+.thoughtItems {
  display: flex;
  flex-direction: column;
  width:90%;
- border-bottom: solid 1px #f3f1f7;
+ border-bottom: solid 3px #f3f1f7;
  padding: 10px;
 }
-.thoughtitems:nth-child(1) {
- padding: 20px 10px 10px 10px;
-}
-.thoughtitems:nth-last-child(1) {
- padding: 10px 10px 30px 10px;
-}
+
 h3 {
  margin: 0px;
 }
@@ -64,7 +60,6 @@ h3 {
  float: right;
 }
 
-/* Form Styling */
 form {
  flex-direction: column;
  display: flex;
@@ -74,6 +69,7 @@ form {
  background-color: #B1DDEA;
  height: 400px;
  border-radius: 5px;
+ margin-top: 20px;
 }
 
 label, textarea, button, input {
