--- a/components/postForm/postForm.html
+++ b/components/postForm/postForm.html
@@ -2,6 +2,6 @@
     <label>Title</label>
     <input type="text" ng-model="$ctrl.newThought.title" placeholder="Post title">
     <label>Thought</label>
-    <textarea ng-model="$ctrl.newThought.thought"></textarea>
+    <textArea ng-model="$ctrl.newThought.thought"></textArea>
     <button class = "addButton" ng-click = "$ctrl.onSubmit({title: $post.newTitle, thought: $post.newThought})">Add Post</button>
 </form>
