--- a/components/socialPost/socialPost.html
+++ b/components/socialPost/socialPost.html
@@ -1,7 +1,7 @@
 <h1 id="title">My Thoughts</h1>
-<section class="maincontainer">
- <button class="buttonthought" ng-click="$ctrl.toggleDisplay();" ng-show="$ctrl.toggleElements">New Thought</button>
- <section class="listcontainer">
+<section class="thoughtPage">
+ <button class="buttonThought" ng-click="$ctrl.toggleDisplay();" ng-show="$ctrl.toggleElements">New Thought</button>
+ <section class="thoughtContainer">
 
   <post delete-thought="$ctrl.deleteThought($index);" posted="thought" index="$index" ng-repeat="thought in $ctrl.posts track by $index">
   </post>
