--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
  font-family: 'Dosis', sans-serif;
  background-color: #f3f1f7;
  display: flex;
+ 
 }
 
 #title {
@@ -51,6 +52,7 @@ body {
  width:90%;
  border-bottom: solid 3px #f3f1f7;
  padding: 10px;
+ word-break: break-all;
 }
 
 h3 {
